# sca-management

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: defd392c4ed1_initial_migration.py
backend/src/: main.py
backend/src/core/: config.py  enums.py
backend/src/db/: base.py  dependencies.py  session.py
backend/src/models/: __init__.py  cat.py  mission.py  target.py
backend/src/repositories/: cat.py  mission.py  target.py
backend/src/routers/: __init__.py  cat.py  mission.py  target.py
backend/src/schemas/: cat.py  mission.py  target.py
backend/src/services/: cat.py  external_api.py  mission.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: AddCatDialog.tsx  CatCard.tsx  CatDetailsDialog.tsx  DeleteCatDialog.tsx  EditCatDialog.tsx
frontend/src/lib/: api.ts
frontend/src/types/: cat.ts
